# python-hello-python

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sonar-project.properties
.github/workflows/: build.yaml  deploy-github-release-assets.yml  deploy-pypi.yml  quality-sonarcloud.yml  workflow-deployments.yml
src/hello_python/: cli.py
tests/: test_util.py
