[project]
name = "hello-python-kqTOS2G"
version = "0.1.0"
description = "poc on python project"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "hello", "poc" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.12"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.urls]
homepage = "https://github.com/siakhooi/python-hello-python"
repository = "https://github.com/siakhooi/python-hello-python"
documentation = "https://github.com/siakhooi/python-hello-python/wiki"
"Bug Tracker" = "https://github.com/siakhooi/python-hello-python/issues"

[project.scripts]
hello-python = 'hello_python.cli:run'


[tool.poetry]
packages = [{include = "hello_python", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
